--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,8 +33,10 @@ jobs:
         run: yarn install
       - name: Lint
         run: npx lerna run lint --stream
-      - name: Build
-        run: npx lerna run build:ci --stream
+      - name: Build Packages
+        run: npx lerna run build --stream --scope '@ibm-watson/*'
+      - name: Build Apps
+        run: npx lerna run build:app --stream
       - name: Test
         run: npx lerna run test --stream
       - name: NPM Identity
