--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Build Packages
         run: npx lerna run build --stream --scope '@ibm-watson/*'
       - name: Build Apps
-        run: npx lerna run build:app --stream
+        run: npx lerna run build:app --parallel
       - name: Test
         run: npx lerna run test --stream
       - name: NPM Identity
