--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,11 +10,7 @@ jobs:
       # https://github.com/actions/checkout
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          # https://github.com/actions/checkout/issues/217
-          # pulls all commits (needed for lerna to correctly version)
-          fetch-depth: "0"
-      # pulls all tags (needed for lerna to correctly version)
+      # https://github.com/actions/checkout/issues/217 pulls all tags (needed for lerna to correctly version)
       - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       # https://github.com/actions/cache
       - name: Cache node_modules
