ci: migrate to github actions (#168)
* build: migrate to github actions

* build: update to use single quotes

* build: fix lerna steps

* ci: remove incorrect matrix.node_version

* ci: add caching

* ci: use lerna --stream for everything

* ci: use lerna run

* ci: add build:ci script

* ci: split package and demo building

* ci: storybook --quiet

* ci: build apps in parallel

* ci: cache hit check before install

* ci: try glob for node_modules

* docs: switch badge

* ci: cache cypress binary

* ci: add docs links

* ci: only fetch tags rather than entire commit history

* ci: remove caching and use --frozen-lockfile

--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -8,6 +8,7 @@
   "homepage": ".",
   "scripts": {
     "audit": "audit-ci --moderate",
+    "build:app": "yarn run build",
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts build",
     "eject": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts eject",
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
