chore: upgrade cypress to 6.3

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "carbon-components-react": "^7.7.0",
     "carbon-icons": "^7.0.7",
     "cross-env": "^7.0.2",
-    "cypress": "4.11.0",
+    "cypress": "^6.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
