--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-virtualized": "^9.21.2",
     "@types/seedrandom": "^2.4.28",
+    "@types/testing-library__cypress": "^5.0.8",
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
