--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,7 @@ env:
   CI: true
 jobs:
   build:
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
     name: build
     runs-on: ubuntu-18.04
     steps:
@@ -49,6 +50,10 @@ jobs:
       - name: Publish Beta (Master)
         if: github.ref == 'refs/heads/master'
         run: npx lerna publish -y --conventional-prerelease --no-changelog --preid beta --dist-tag beta
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Publish Release Candidate (Release)
         if: contains(github.ref, 'release/')
         run: npx lerna publish -y --conventional-prerelease --no-changelog --preid rc --dist-tag rc
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
