--- a/examples/discovery-search-app/.env
+++ b/examples/discovery-search-app/.env
@@ -1,6 +1,2 @@
 SASS_PATH=node_modules:src
-REACT_APP_PROJECT_ID=REPLACE_ME
-CLUSTER_USERNAME=
-CLUSTER_PASSWORD=
-CLUSTER_PORT=
-CLUSTER_HOST=
+REACT_APP_PROJECT_ID=
