--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^2.21.0",
     "audit-ci": "^3.1.1",
     "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "carbon-components": "^10.6.0",
@@ -69,6 +70,7 @@
     "eslint-plugin-react-hooks": "1.x",
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
+    "https": "^1.0.0",
     "husky": "^3.0.5",
     "ibm-watson": "^6.0.2",
     "lerna": "^3.16.4",
