--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "node-sass-tilde-importer": "^1.0.2",
     "prettier": "^1.19.1",
     "prop-types": "^15.6.2",
+    "proper-url-join": "^2.1.1",
     "raw-loader": "^3.1.0",
     "react": "^16.4.1",
     "react-docgen-typescript-loader": "^3.1.1",
