--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "^2.21.0",
     "audit-ci": "^3.1.1",
     "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "carbon-components": "^10.6.0",
@@ -82,6 +83,7 @@
     "node-sass-tilde-importer": "^1.0.2",
     "prettier": "^1.19.1",
     "prop-types": "^15.6.2",
+    "proper-url-join": "^2.1.1",
     "raw-loader": "^3.1.0",
     "react": "^16.4.1",
     "react-docgen-typescript-loader": "^3.1.1",
