--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,14 +42,14 @@ jobs:
           path: |
             examples/discovery-search-app/cypress/screenshots
       - name: NPM Identity
-        if: github.ref == 'refs/heads/master' || contains(github.ref, 'release/')
+        if: github.ref == 'refs/heads/master'
         run: |
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
           npm whoami
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Github Identity
-        if: github.ref == 'refs/heads/master' || contains(github.ref, 'release/')
+        if: github.ref == 'refs/heads/master'
         run: |
           git config --global push.default simple
           git config --global user.email "watdevex@us.ibm.com"
