build: revert react-virtualized back to 9.21.1

--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -58,7 +58,7 @@
     "pdfjs-dist": "^2.2.228",
     "react-error-boundary": "^1.2.5",
     "react-resize-detector": "^4.2.1",
-    "react-virtualized": "^9.22.3"
+    "react-virtualized": "9.21.1"
   },
   "jest": {
     "transformIgnorePatterns": [
