test: attempt to fix jest run

--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -49,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!carbon-components-react)/"
+    ]
   }
 }
