--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,6 @@
 {
-  "trailingComma": "none",
-  "tabWidth": 2,
-  "semi": true,
-  "singleQuote": true,
+  "arrowParens": "avoid",
   "printWidth": 100,
-  "bracketSpacing": true,
-  "endOfLine": "lf"
+  "singleQuote": true,
+  "trailingComma": "none"
 }
