fix: how CJS output handles ListBox import

--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@cypress/webpack-preprocessor": "^5.5.0",
-    "@rollup/plugin-alias": "^3.0.1",
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-json": "^4.0.1",
-    "@rollup/plugin-node-resolve": "^6.0.0",
-    "@rollup/plugin-url": "^4.0.0",
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-url": "^6.1.0",
     "@storybook/addon-actions": "^5.3.21",
     "@storybook/addon-docs": "^5.3.21",
     "@storybook/addon-knobs": "^5.3.21",
     "@storybook/core": "^5.3.21",
     "@storybook/react": "^5.3.21",
     "@storybook/source-loader": "^5.3.21",
-    "@svgr/rollup": "^4.3.2",
+    "@svgr/rollup": "^5.5.0",
     "@testing-library/cypress": "^7.0.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -92,9 +92,10 @@
     "react-scripts": "^3.4.4",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.13.3",
-    "rollup": "^1.20.2",
+    "rollup": "^2.57.0",
     "rollup-plugin-string": "^3.0.0",
-    "rollup-plugin-typescript2": "^0.23.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "seedrandom": "^3.0.5",
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.11.7",
