--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -40,8 +40,7 @@
     "react-dom": ">= 16.8.0 < 17"
   },
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": ">=12"
   },
   "jsnext:main": "dist/index.es.js",
   "publishConfig": {
