--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -20,8 +20,7 @@
     "carbon-components": ">= 10.6.0 < 11"
   },
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": ">=12"
   },
   "publishConfig": {
     "access": "public"
