chore: use new `workspace:` protocol

--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -23,8 +23,8 @@
   },
   "dependencies": {
     "@carbon/icons": "^10.5.0",
-    "@ibm-watson/discovery-react-components": "file:../../packages/discovery-react-components",
-    "@ibm-watson/discovery-styles": "file:../../packages/discovery-styles",
+    "@ibm-watson/discovery-react-components": "workspace:*",
+    "@ibm-watson/discovery-styles": "workspace:*",
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
