chore: fix running main scripts

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,13 +27,13 @@ jobs:
       - name: Install
         run: yarn install --immutable
       - name: Lint
-        run: npx lerna run lint --stream
+        run: yarn run lint
       - name: Build Packages
-        run: npx lerna run build --stream --scope '@ibm-watson/*'
+        run: yarn run build:pkgs
       - name: Build Apps
-        run: npx lerna run build:app --parallel
+        run: yarn run build:apps
       - name: Test
-        run: npx lerna run test --stream
+        run: yarn run test
       - name: Archive test artifacts
         uses: actions/upload-artifact@v2
         if: failure()
@@ -61,7 +61,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Publish
         if: github.ref == 'refs/heads/master'
-        # must include --no-verify-access for automation tokens https://github.com/lerna/lerna/issues/2788
-        run: npx lerna publish -y --no-verify-access --create-release github
+        # TODO
+        run: yarn workspaces foreach -v npm publish -y --no-verify-access --create-release github
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
