--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,7 +61,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
       - name: Publish
         if: github.ref == 'refs/heads/master'
-        # TODO
-        run: yarn workspaces foreach -v npm publish -y --no-verify-access --create-release github
+        # must include --no-verify-access for automation tokens https://github.com/lerna/lerna/issues/2788
+        run: lerna publish -y --no-verify-access --create-release github
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
