--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "@carbon/icons": "^10.5.0",
-    "@ibm-watson/discovery-react-components": "^1",
-    "@ibm-watson/discovery-styles": "^1",
+    "@ibm-watson/discovery-react-components": "file:../../packages/discovery-react-components",
+    "@ibm-watson/discovery-styles": "file:../../packages/discovery-styles",
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
