--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -73,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
     "sass-loader": "^8.0.2"
