--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -7,12 +7,11 @@
   "author": "IBM Corp.",
   "homepage": ".",
   "scripts": {
-    "audit": "audit-ci --moderate",
     "build:app": "yarn run build",
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts build",
     "eject": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts eject",
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "lint": "eslint --quiet '{src,cypress}/**/*.{js,jsx,ts,tsx}' './*.{js,jsx,ts,tsx}'",
+    "lint": "yarn run g:eslint --quiet '{src,cypress}/**/*.{js,jsx,ts,tsx}' './*.{js,jsx,ts,tsx}'",
     "test:e2e": "cross-env REACT_APP_CYPRESS_MODE=true BROWSER=none CYPRESS_baseUrl=http://localhost:3000 start-server-and-test start http://localhost:3000 'cypress run'",
     "test:unit": "cross-env SKIP_PREFLIGHT_CHECK=true CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
@@ -23,8 +22,8 @@
   },
   "dependencies": {
     "@carbon/icons": "^10.5.0",
-    "@ibm-watson/discovery-react-components": "file:../../packages/discovery-react-components",
-    "@ibm-watson/discovery-styles": "file:../../packages/discovery-styles",
+    "@ibm-watson/discovery-react-components": "^1.5.0-beta.0",
+    "@ibm-watson/discovery-styles": "^1.4.1-beta.1",
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
@@ -34,9 +33,12 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
     "ibm-watson": "^6.2.1",
-    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "react-scripts": "^3.4.4"
   },
   "browserslist": {
     "production": [
