--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "examples/*"
   ],
   "scripts": {
-    "lint": "wsrun -m -e -c lint",
-    "audit": "wsrun -m -e -c audit"
+    "lint": "yarn workspaces foreach -v --parallel run lint",
+    "audit": "audit-ci --moderate",
+    "build:pkgs": "yarn workspaces foreach -v --parallel --include '@ibm-watson/*' run build",
+    "build:apps": "yarn workspaces foreach -v --parallel run build:app",
+    "test": "yarn workspaces foreach -v --parallel run test",
+    "g:analyze": "cd $INIT_CWD && source-map-explorer",
+    "g:eslint": "cd $INIT_CWD && eslint"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -47,7 +52,7 @@
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
-    "audit-ci": "^4.1.0",
+    "audit-ci": "^5.1.2",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.21.4",
     "babel-eslint": "^10.1.0",
@@ -55,7 +60,6 @@
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
     "carbon-icons": "^7.0.7",
-    "cross-env": "^7.0.2",
     "cypress": "^6.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -76,20 +80,17 @@
     "lerna-update-wizard": "^0.17.8",
     "lint-staged": "^9.2.5",
     "lorem-ipsum": "^2.0.3",
-    "madge": "^4.0.1",
     "markdown-toc": "^1.2.0",
     "marked": "^0.7.0",
     "node-sass": "^4.12.0",
     "node-sass-tilde-importer": "^1.0.2",
     "prettier": "^2.4.1",
-    "prop-types": "^15.6.2",
     "proper-url-join": "^2.1.1",
     "raw-loader": "^4.0.2",
     "react": "^16.4.1",
     "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
     "react-is": "^16.12.0",
-    "react-scripts": "^3.4.4",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^2.57.0",
@@ -103,18 +104,7 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.2",
     "vue": "^2.6.11",
-    "webpack": "4.41.2",
-    "wsrun": "^5.2.0"
-  },
-  "resolutions": {
-    "react-scripts/**/url-parse": "^1.5.1",
-    "@storybook/addon-docs/**/pug": "^3.0.2",
-    "webpack/**/elliptic": "^6.5.4",
-    "**/hosted-git-info": "^3.0.8",
-    "**/lodash": "^4.17.21",
-    "**/react-dev-utils": "^11.0.4",
-    "**/react-syntax-highlighter/**/prismjs": "^1.23.0",
-    "**/ssri": "^8.0.1"
+    "webpack": "4.41.2"
   },
   "lint-staged": {
     "{packages,examples}/**/*.{json,css,scss,md}": [
@@ -136,5 +126,6 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "post-rewrite": "lint-staged"
     }
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
