--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,8 @@ jobs:
           echo "npmRegistries:" >> ~/.yarnrc.yml
           echo "  //registry.npmjs.org:" >> ~/.yarnrc.yml
           echo "    npmAuthToken: $NPM_TOKEN" >> ~/.yarnrc.yml
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+          npm whoami
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Github Identity
