--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -49,6 +49,7 @@
     "@storybook/core": "^5.3.21",
     "@storybook/react": "^5.3.21",
     "@storybook/source-loader": "^5.3.21",
+    "@types/pdfjs-dist": "2.1.7",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
