--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -28,6 +28,7 @@
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
     "classnames": "^2.2.6",
+    "core-js": "^2.6.12",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
