feat: document provider interface (#249)
* feat: add documentProvider prop

* feat: use (stub) documentProvider in example app

* feat: re-enable PdfViewer

* feat: make interface methods async

* chore: fix peer-deps so example app can run

* feat: pull PDF file from context (if available)

* feat: create DocumentProvider in example app

* fix: API doc update

* chore: update react-virtualized to match tooling

* fix: this file isn't Typescript

* chore: update yarn.lock

* fix: fix CI

* refactor: move PDF page count code to PDFViewer

* feat: hide toolbar in text/html preview

Co-authored-by: Susumu Fukuda <FUKUDAS@jp.ibm.com>

--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -40,7 +40,7 @@
     "pdfjs-dist": "^2.2.228",
     "react-error-boundary": "^1.2.5",
     "react-resize-detector": "^4.2.1",
-    "react-virtualized": "9.21.1"
+    "react-virtualized": "9.21.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.21",
@@ -61,6 +61,7 @@
     "@ibm-watson/discovery-styles": "1.x.x",
     "carbon-components": ">= 10.46.0 < 11",
     "carbon-components-react": ">= 7.46.0 < 8",
+    "core-js": "^2.6.12",
     "ibm-watson": "^6.0.2",
     "react": ">= 16.8.0 < 17",
     "react-dom": ">= 16.8.0 < 17"
