--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -13,11 +13,11 @@
     "test:watch": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts test --watch",
     "test:debug": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts --inspect-brk test --runInBand --no-cache",
     "circular": "madge --circular src/*",
-    "build": "rollup -c",
+    "build": "yarn run g:rollup -c",
     "build:app": "yarn run storybook:build --quiet",
     "eslint": "yarn run g:eslint --quiet '{src,.storybook}/**/*.{js,jsx,ts,tsx}'",
     "lint": "yarn run circular && yarn run eslint",
-    "start": "rollup -c -w",
+    "start": "yarn run g:rollup -c -w",
     "storybook": "start-storybook --ci --port=9002",
     "storybook:build": "build-storybook",
     "storybook:build:release": "cross-env STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
