Revert "chore: create a global rollup cmd"
This reverts commit 1a5ef1cb97eedf6aafb9252f9ea8e63fa94df7f0.

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "build:apps": "yarn workspaces foreach -v --parallel run build:app",
     "test": "yarn workspaces foreach -v --parallel run test",
     "g:analyze": "cd $INIT_CWD && source-map-explorer",
-    "g:eslint": "cd $INIT_CWD && eslint",
-    "g:rollup": "cd $INIT_CWD && rollup"
+    "g:eslint": "cd $INIT_CWD && eslint"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
