--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -43,17 +43,27 @@
     "react-virtualized": "9.21.2"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-url": "^6.1.0",
     "@storybook/addon-actions": "^5.3.21",
     "@storybook/addon-docs": "^5.3.21",
     "@storybook/addon-knobs": "^5.3.21",
     "@storybook/core": "^5.3.21",
     "@storybook/react": "^5.3.21",
     "@storybook/source-loader": "^5.3.21",
+    "@svgr/rollup": "^5.5.0",
     "@types/pdfjs-dist": "2.1.7",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
     "react-scripts": "^3.4.4",
+    "rollup": "^2.57.0",
+    "rollup-plugin-string": "^3.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "sass-loader": "^8.0.2"
   },
   "peerDependencies": {
