--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -40,7 +40,8 @@
     "pdfjs-dist": "^2.2.228",
     "react-error-boundary": "^1.2.5",
     "react-resize-detector": "^4.2.1",
-    "react-virtualized": "9.21.2"
+    "react-virtualized": "9.21.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.5",
@@ -55,16 +56,21 @@
     "@storybook/react": "^5.3.21",
     "@storybook/source-loader": "^5.3.21",
     "@svgr/rollup": "^5.5.0",
+    "@types/marked": "^4",
     "@types/pdfjs-dist": "2.1.7",
+    "@types/uuid": "^8",
     "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
-    "react-scripts": "^3.4.4",
+    "marked": "^4.0.10",
+    "node-sass": "^6.0.1",
+    "react-scripts": "^4.0.3",
     "rollup": "^2.57.0",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^10.2.1",
+    "style-loader": "^1.3.0"
   },
   "peerDependencies": {
     "@carbon/icons": ">= 10.5.0 < 11",
