test: set 'resetMocks' to false
Mimics react-scripts 3.x behavior

--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -90,6 +90,8 @@
     "access": "public"
   },
   "jest": {
+    "resetMocks": false,
+    "displayName": "Disco React Components (Unit)",
     "transformIgnorePatterns": [
       "/!node_modules\\/react-virtualized/"
     ],
