--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-* @maniax89 @noah-eigenfeld @kabeaty @jhpedemonte @ColbyJohnIBM @broulaye @NickMele @hankthewhale
+* @noah-eigenfeld @jhpedemonte @ColbyJohnIBM @broulaye
 
-/packages/discovery-components-react/src/components/DocumentPreview/ @JuanNicolasGarcia @broulaye @anibapat @jhpedemonte @ColbyJohnIBM
-/packages/discovery-components-react/src/components/CIDocument/ @JuanNicolasGarcia @broulaye @anibapat @jhpedemonte @ColbyJohnIBM
+/packages/discovery-components-react/src/components/DocumentPreview/ @broulaye @anibapat @jhpedemonte @ColbyJohnIBM
+/packages/discovery-components-react/src/components/CIDocument/ @broulaye @anibapat @jhpedemonte @ColbyJohnIBM
