chore: update deps to support react 17

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "g:eslint": "cd $INIT_CWD && eslint"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
     "@carbon/icons": "^10.5.0",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
@@ -24,6 +25,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/react-hooks": "^7.0.2",
+    "@types/babel__preset-env": "^7.9.2",
     "@types/classnames": "^2.2.9",
     "@types/debounce": "^1.2.0",
     "@types/dompurify": "^0.0.33",
@@ -31,34 +33,33 @@
     "@types/lodash": "^4.14.141",
     "@types/mustache": "^0.8.32",
     "@types/node": "^12.7.3",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@types/react-resize-detector": "^4.2.0",
     "@types/react-virtualized": "^9.21.11",
     "@types/seedrandom": "^3.0.1",
     "@types/testing-library__cypress": "^5.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.21.0",
-    "@typescript-eslint/parser": "^2.21.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "audit-ci": "^5.1.2",
     "awesome-typescript-loader": "^5.2.1",
     "axios": "^0.21.4",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.3",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.7.0",
     "carbon-icons": "^7.0.7",
     "cypress": "^6.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-flowtype": "3.x",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-no-only-tests": "^2.4.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-no-only-tests": "^2.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "1.x",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
@@ -71,11 +72,11 @@
     "prettier": "^2.4.1",
     "proper-url-join": "^2.1.1",
     "raw-loader": "^4.0.2",
-    "react": "^16.4.1",
-    "react-docgen-typescript-loader": "^3.1.1",
-    "react-dom": "^16.4.1",
-    "react-is": "^16.12.0",
-    "react-test-renderer": "^16.12.0",
+    "react": "^17.0.2",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "regenerator-runtime": "^0.13.3",
     "seedrandom": "^3.0.5",
     "source-map-explorer": "2.0.1",
@@ -106,6 +107,18 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "post-rewrite": "lint-staged"
     }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "packageManager": "yarn@3.1.0"
 }
