--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -25,8 +25,9 @@
     "@ibm-watson/discovery-react-components": "^1.5.0-beta.15",
     "@ibm-watson/discovery-styles": "^1.5.0-beta.14",
     "body-parser": "^1.19.0",
-    "carbon-components": "^10.6.0",
-    "carbon-components-react": "^7.7.0",
+    "carbon-components": "^10.51.0",
+    "carbon-components-react": "^7.51.0",
+    "carbon-icons": "^7.0.7",
     "classnames": "^2.2.6",
     "core-js": "^2.6.12",
     "cors": "^2.8.5",
@@ -34,23 +35,11 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
     "ibm-watson": "^6.2.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "react-scripts": "^4.0.3"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
