--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -25,8 +25,8 @@
     "@ibm-watson/discovery-react-components": "^1.5.0-beta.15",
     "@ibm-watson/discovery-styles": "^1.5.0-beta.14",
     "body-parser": "^1.19.0",
-    "carbon-components": "^10.51.0",
-    "carbon-components-react": "^7.51.0",
+    "carbon-components": "~10.46.0",
+    "carbon-components-react": "~7.46.0",
     "carbon-icons": "^7.0.7",
     "classnames": "^2.2.6",
     "core-js": "^2.6.12",
