fix: set white bkgrnd for CI doc

--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "node-sass --importer=../../node_modules/node-sass-tilde-importer --source-map=true scss/index.scss css/index.css",
     "prepublish": "yarn run build",
-    "start": "yarn run build -- --watch",
+    "start": "yarn run build --watch",
     "analyze": "yarn run g:analyze css/index.css",
     "update-styles-from-pdfjs": "scripts/update-styles-from-pdfjs.sh"
   },
