--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibm-watson/discovery-react-components",
-  "version": "2.0.0-beta.0",
+  "version": "2.0.0",
   "description": "Discovery components built with the React framework and IBM Carbon components",
   "license": "Apache-2.0",
   "author": "IBM Corp.",
