chore: update CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,1 @@
-* @noah-eigenfeld @jhpedemonte @ColbyJohnIBM @broulaye
-
-/packages/discovery-components-react/src/components/DocumentPreview/ @broulaye @anibapat @jhpedemonte @ColbyJohnIBM
-/packages/discovery-components-react/src/components/CIDocument/ @broulaye @anibapat @jhpedemonte @ColbyJohnIBM
+* @noah-eigenfeld @jhpedemonte @ColbyJohnIBM
