--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -63,13 +63,13 @@
     "css-loader": "^3.4.2",
     "madge": "^5.0.1",
     "marked": "^4.0.10",
-    "node-sass": "^6.0.1",
     "react-scripts": "^5.0.1",
     "rollup": "^2.57.0",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
-    "sass-loader": "^10.2.1",
+    "sass": "^1.52.1",
+    "sass-loader": "^12.3.0",
     "style-loader": "^1.3.0"
   },
   "peerDependencies": {
