fix: upgrade to Storybook v6

--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -18,7 +18,7 @@
     "eslint": "yarn run g:eslint --quiet '{src,.storybook}/**/*.{js,jsx,ts,tsx}'",
     "lint": "yarn run circular && yarn run eslint",
     "start": "rollup -c -w",
-    "storybook": "start-storybook --ci --port=9002 -s ../../node_modules/pdfjs-dist",
+    "storybook": "start-storybook --ci --port=9002",
     "storybook:build": "build-storybook",
     "storybook:build:release": "cross-env STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
     "analyze": "yarn run g:analyze 'dist/index.js'",
@@ -49,12 +49,15 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-url": "^6.1.0",
-    "@storybook/addon-actions": "^5.3.21",
-    "@storybook/addon-docs": "^5.3.21",
-    "@storybook/addon-knobs": "^5.3.21",
-    "@storybook/core": "^5.3.21",
-    "@storybook/react": "^5.3.21",
-    "@storybook/source-loader": "^5.3.21",
+    "@storybook/addon-actions": "^6.5.6",
+    "@storybook/addon-docs": "^6.5.6",
+    "@storybook/addon-knobs": "^6.4.0",
+    "@storybook/builder-webpack5": "^6.5.6",
+    "@storybook/core": "^6.5.6",
+    "@storybook/manager-webpack5": "^6.5.6",
+    "@storybook/preset-create-react-app": "^4.1.1",
+    "@storybook/react": "^6.5.6",
+    "@storybook/source-loader": "^6.5.6",
     "@svgr/rollup": "^5.5.0",
     "@types/marked": "^4",
     "@types/pdfjs-dist": "2.1.7",
