--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -25,19 +25,26 @@
     "@ibm-watson/discovery-react-components": "^2.0.3",
     "@ibm-watson/discovery-styles": "^2.0.1",
     "body-parser": "^1.19.0",
+    "browserify-zlib": "^0.2.0",
     "carbon-components": "~10.46.0",
     "carbon-components-react": "~7.46.0",
     "carbon-icons": "^7.0.7",
     "classnames": "^2.2.6",
     "core-js": "^2.6.12",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
+    "https-browserify": "^1.0.0",
     "ibm-watson": "^6.2.1",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "proper-url-join": "^2.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0"
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^5.11.0",
